build all keymaps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,9 @@ jobs:
           name: Build keymap
           command: |
             mkdir /tmp/artifacts
-            make clean && make planck/rev4:eiryu
-            cp planck_rev4_eiryu.hex /tmp/artifacts
+            make git-submodule
+            make clean && make all:all
+            cp *.hex /tmp/artifacts
       - store_artifacts:
           path: /tmp/artifacts
 
